Always fill price and priceFormatted column in database

MyMoneySplit::price() guarantees to return a price that is never zero.

BUG: 478386
FIXED-IN: 5.2